--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_core: ^3.10.0
   firebase_database: ^11.3.0
   intl: ^0.19.0
+  cloud_firestore: ^5.6.1
 
 dev_dependencies:
   flutter_test:
