--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,17 @@ dependencies:
   firebase_database: ^11.3.0
   intl: ^0.19.0
   cloud_firestore: ^5.6.1
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
 
-
 flutter:
-  generate: true
   uses-material-design: true
+  assets:
+    - assets/
+    - assets/ingredients/
+flutter_intl:
+  enabled: true
