--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   intl: ^0.19.0
   cloud_firestore: ^5.6.1
   url_launcher: ^6.3.1
+  webauthn: ^0.2.5
+  firebase_auth: ^5.4.1
 
 dev_dependencies:
   flutter_test:
