--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,24 +6,31 @@ version: 1.0.0+1
 environment:
   sdk: ^3.5.4
 dependencies:
+  cloud_firestore: ^5.6.1
   cupertino_icons: ^1.0.8
+  dev: ^1.0.0
+  fake_cloud_firestore: ^3.1.0
+  firebase_auth: ^5.4.1
+  firebase_core: ^3.10.0
+  firebase_database: ^11.3.0
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-  firebase_core: ^3.10.0
-  firebase_database: ^11.3.0
   intl: ^0.19.0
-  cloud_firestore: ^5.6.1
+  mockito: ^5.4.4
+  provider: ^6.1.2
   url_launcher: ^6.3.1
   webauthn: ^0.2.5
-  firebase_auth: ^5.4.1
-  provider: ^6.1.2
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  integration_test:
+    sdk: flutter
 
 flutter:
   uses-material-design: true
