--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
   dev: ^1.0.0
   fake_cloud_firestore: ^3.1.0
   firebase_auth: ^5.4.1
+  firebase_auth_mocks: ^0.14.1
   firebase_core: ^3.10.0
   firebase_database: ^11.3.0
   flutter:
