--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.24.0'
+          flutter-version: '3.24.4'
 
       - name: Install dependencies
         run: flutter pub get
@@ -39,7 +39,7 @@ jobs:
         run: sudo apt-get install -y lcov
 
       - name: Remove Unwanted Coverage Files
-        run: lcov --remove coverage/lcov.info 'lib/generated/*' 'lib/l10n/*' 'lib/annotations/*' -o coverage/lcov.info
+        run: lcov --remove coverage/lcov.info 'lib/generated/*' 'lib/l10n/*' -o coverage/lcov.info
 
       - name: Generate HTML Coverage Report
         run: genhtml coverage/lcov.info -o coverage/html
