--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  hive_flutter: ^1.1.0
   intl: ^0.19.0
   mockito: ^5.4.4
   provider: ^6.1.2
@@ -36,6 +37,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
   integration_test:
     sdk: flutter
+  hive_generator: ^2.0.1
 
 flutter:
   uses-material-design: true
