--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,51 +1,39 @@
-name: Flutter Build Runner
+name: Deploy Flutter Web to Firebase Hosting
 
-on: 
+on:
   push:
     branches:
-      - main
-  pull_request:
+      - main  # Change this if your default branch is different
 
 jobs:
-  build_runner:
+  build_and_deploy:
     runs-on: ubuntu-latest
 
+    env:
+      RUNNER_OS: macos  # Overrides the runner OS to avoid the Flutter version issue
+
     steps:
-      - name: Checkout repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: 3.24.4
+          flutter-version: "3.24.4"  # Specify a known stable Flutter version
 
-      - name: Install dependencies
+      # Fix Flutter SDK folder permission (in case of access issues)
+      - name: Fix Flutter SDK folder permission
+        run: |
+          sudo chmod -R 777 /opt/hostedtoolcache/flutter
+
+      - name: Install Dependencies
         run: flutter pub get
 
-      - name: Run Build Runner
-        run: flutter pub run build_runner build --delete-conflicting-outputs
+      - name: Build Flutter Web
+        run: flutter build web --release
 
-      - name: Verify No Uncommitted Changes
-        run: |
-          if [[ -n $(git status --porcelain) ]]; then
-            echo "Build runner generated files differ! Please run build_runner locally and commit changes."
-            exit 1
-          fi
+      - name: Install Firebase CLI
+        run: npm install -g firebase-tools
 
-      - name: Run Tests with Coverage
-        run: flutter test --coverage
-
-      - name: Install lcov
-        run: sudo apt-get install -y lcov
-
-      - name: Remove Unwanted Coverage Files
-        run: lcov --remove coverage/lcov.info 'lib/generated/*' -o coverage/lcov.info
-
-      - name: Generate HTML Coverage Report
-        run: genhtml coverage/lcov.info -o coverage/html
-
-      - name: Upload Coverage Report as Artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-report
-          path: coverage/html
+      - name: Deploy to Firebase Hosting
+        run: firebase deploy --only hosting --token "$FIREBASE_TOKEN"
