--- a/.github/workflows/firebase_deploy.yml
+++ b/.github/workflows/firebase_deploy.yml
@@ -9,6 +9,9 @@ jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
 
+    env:
+      RUNNER_OS: macos
+
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v3
@@ -16,7 +19,11 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.7.11"
+          flutter-version: "3.24.4"
+
+      - name: Fix Flutter SDK folder permission
+        run: |
+          sudo chmod -R 777 /opt/hostedtoolcache/flutter
 
       - name: Install Dependencies
         run: flutter pub get
