--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -1,16 +1,18 @@
-name: Add coverage for current tests
+name: Flutter Build Runner & Test Coverage
 
-on:
+on: 
   push:
     branches:
-      - main  # Change this if your default branch is different
+      - main
+      - develop
+  pull_request:
 
 jobs:
-  build_and_deploy:
+  build_runner_and_tests:
     runs-on: ubuntu-latest
 
     env:
-      RUNNER_OS: macos  # Overrides the runner OS to avoid the Flutter version issue
+      RUNNER_OS: macos
 
     steps:
       - name: Checkout Repository
@@ -19,21 +21,39 @@ jobs:
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: "3.24.4"  # Specify a known stable Flutter version
+          flutter-version: "3.24.4"
 
-      # Fix Flutter SDK folder permission (in case of access issues)
       - name: Fix Flutter SDK folder permission
         run: |
           sudo chmod -R 777 /opt/hostedtoolcache/flutter
 
-      - name: Install Dependencies
+      - name: Install dependencies
         run: flutter pub get
 
-      - name: Build Flutter Web
-        run: flutter build web --release
+      - name: Run Build Runner
+        run: flutter pub run build_runner build --delete-conflicting-outputs
 
-      - name: Install Firebase CLI
-        run: npm install -g firebase-tools
+      - name: Verify No Uncommitted Changes
+        run: |
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "Build runner generated files differ! Please run build_runner locally and commit changes."
+            exit 1
+          fi
 
-      - name: Deploy to Firebase Hosting
-        run: firebase deploy --only hosting --token "$FIREBASE_TOKEN"
+      - name: Run Tests with Coverage
+        run: flutter test --coverage
+
+      - name: Install lcov
+        run: sudo apt-get install -y lcov
+
+      - name: Remove Unwanted Coverage Files
+        run: lcov --remove coverage/lcov.info 'lib/generated/*' 'lib/l10n/*' -o coverage/lcov.info
+
+      - name: Generate HTML Coverage Report
+        run: genhtml coverage/lcov.info -o coverage/html
+
+      - name: Upload Coverage Report as Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage/html
