Added android implementation

--- a/firebase.json
+++ b/firebase.json
@@ -1,35 +1,1 @@
-{
-  "flutter": {
-    "platforms": {
-      "dart": {
-        "lib/firebase_options.dart": {
-          "projectId": "altaguardia-hub",
-          "configurations": {
-            "web": "1:610805260869:web:0e0616b0a06616cc37792c"
-          }
-        }
-      }
-    }
-  },
-  "database": {
-    "rules": "database.rules.json"
-  },
-  "hosting": {
-    "public": "build/web",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
-    "rewrites": [
-      {
-        "source": "**",
-        "destination": "/index.html"
-      }
-    ]
-  },
-  "firestore": {
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
-  }
-}
+{"flutter":{"platforms":{"dart":{"lib/firebase_options.dart":{"projectId":"altaguardia-hub","configurations":{"android":"1:610805260869:android:e1b57f97da5c34ba37792c","web":"1:610805260869:web:0e0616b0a06616cc37792c"}}},"android":{"default":{"projectId":"altaguardia-hub","appId":"1:610805260869:android:e1b57f97da5c34ba37792c","fileOutput":"android/app/google-services.json"}}}},"database":{"rules":"database.rules.json"},"hosting":{"public":"build/web","ignore":["firebase.json","**/.*","**/node_modules/**"],"rewrites":[{"source":"**","destination":"/index.html"}]},"firestore":{"rules":"firestore.rules","indexes":"firestore.indexes.json"}}
